# world-cup-2026-calendar-worker

./: .gitignore  README.md  pyproject.toml  wrangler.jsonc
data/: matches.json
src/: __init__.py  calendar_builder.py  fallback_data.py  fixtures.py  football_data_client.py  main.py  models.py  normalizer.py  venue_lookup.py
tests/: test_calendar_builder.py  test_fixtures.py  test_normalizer.py  test_scheduled_refresh.py  test_world_cup_endpoint.py
