[project]
name = "world-cup-2026-calendar-worker"
version = "0.1.0"
description = "Cloudflare Python Worker serving a dynamic FIFA World Cup 2026 iCalendar feed"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "icalendar",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "pytest-asyncio",
  "uvicorn",
  "workers-py",
  "workers-runtime-sdk",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
